--- a/.env
+++ b/.env
@@ -32,3 +32,8 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&ch
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+
+STRIPE_ID=
+STRIPE_SECRET=
+STRIPE_WEBHOOK_SECRET=
