--- a/.env
+++ b/.env
@@ -37,3 +37,11 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&ch
 STRIPE_ID=
 STRIPE_SECRET=
 STRIPE_WEBHOOK_SECRET=
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=redis://redis:6379/messages
+MESSENGER_TRANSPORT_FAILED_DSN=redis://redis:6379/messages_failed
+###< symfony/messenger ###
