--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,9 @@
         "symfony/framework-bundle": "6.3.*",
         "symfony/http-foundation": "6.3.*",
         "symfony/mailer": "6.3.*",
+        "symfony/messenger": "6.3.*",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/redis-messenger": "^6.3",
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
         "symfony/translation": "6.3.*",
@@ -78,8 +81,10 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.43",
+        "symfony/debug-bundle": "6.3.*",
+        "symfony/maker-bundle": "<=1.43",
         "symfony/stopwatch": "6.3.*",
+        "symfony/var-dumper": "6.3.*",
         "symfony/web-profiler-bundle": "6.3.*"
     }
 }
