--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -4,3 +4,8 @@ controllers:
 kernel:
     resource: ../../src/Kernel.php
     type: annotation
+api_controllers:
+    name_prefix: api_
+    prefix: /api
+    resource: ../../src/Http/Api/Controller/
+    type: annotation
