--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,5 +28,9 @@ services:
         resource: '../src/Http/Controller'
         tags: [ 'controller.service_arguments' ]
 
+    App\Http\Api\Controller\:
+        resource: '../src/Http/Api/Controller'
+        tags: [ 'controller.service_arguments' ]
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
